--- a/programs.html
+++ b/programs.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1><span class="mind">Mind</span> & <span class="move">Move</span> Chess Foundation</h1>
+            <h1><span class="The Olouch's Chess Family"><span>The Olouch's chess Foundation</span>The Olouch's chess Found</h1>
         </div>
         <!-- Programs Section -->
     <section id="programs" class="programs">
@@ -310,4 +310,5 @@ document.querySelector('.events-section').appendChild(loginBtn);
 
     </script>
 </body>
+
 </html>
