--- a/programs.html
+++ b/programs.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1><span class="The Olouch's Chess Family"></span>The Olouch's Chess Family</h1>
+            <h1><span class="The Olouch's Chess Foundation"></span>The Olouch's Chess Foundation</h1>
         </div>
         <!-- Programs Section -->
     <section id="programs" class="programs">
@@ -312,4 +312,5 @@ document.querySelector('.events-section').appendChild(loginBtn);
 </body>
 
 </html>
+
 
