Added navbar to other pages

--- a/index.html
+++ b/index.html
@@ -13,49 +13,7 @@
     <!-- Header & Navigation -->
     <header>
         <!-- responsive navbar -->
-        <nav class="navbar">
-            <!-- logo -->
-            <div class="nav-logo" onclick="window.location.href = 'index.html'">
-                <img src="chesslogo.png" alt="Logo">
-                <span>The Olouch's Chess Foundation</span>
-            </div>
-
-            <!-- Hamburger Menu Button -->
-            <button class="hamburger-menu" aria-label="Toggle navigation menu">
-                <i class="fas fa-bars"></i>
-            </button>
-
-            <!-- Navigation Menu (will be toggled) -->
-            <div class="nav-menu">
-                <div class="nav-items">
-                    <!-- navigation links -->
-                    <ul class="nav-links">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="programs.html">Programs</a></li>
-                        <li><a href="donate.html">Donate</a></li>
-                    </ul>
-                </div>
-                <!-- Auth buttons -->
-                <div class="auth-buttons">
-                    <a href="signup.html" class="btn">Sign Up</a>
-                    <a href="login.html" class="btn">Login</a>
-                </div>
-                <div class="language-selector">
-                    <select id="language-select" class="btn">
-                        <option value="en">English</option>
-                        <option value="fr">Français</option>
-                        <option value="es">Español</option>
-                        <option value="de">Deutsch</option>
-                        <option value="zh">中文</option>
-                        <option value="ar">العربية</option>
-                        <option value="pt">Português</option>
-                        <option value="sw">Kiswahili</option>
-                    </select>
-                </div>
-            </div>
-        </nav>
+        <div class="nav-bar-placeholder"></div>
     </header>
 
     <!-- Hero Section -->
