--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Olouch's Chess Foundation</title>
+    <title>The Olouch Chess Foundation</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -37,11 +37,13 @@
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#><i class="fab fa-tiktok"></i></a>a>
         </div>
-        <p>&copy; 2025 The Olouch's Chess Foundation. All rights reserved.</p>
+        <p>&copy; 2025 The Olouch Chess Foundation. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
