--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#><i class="fab fa-tiktok"></i></a>a>
+            <a href="#><i class="fab fa-tiktok"></i></a>
         </div>
         <p>&copy; 2025 The Olouch Chess Foundation. All rights reserved.</p>
     </footer>
@@ -47,3 +47,4 @@
 
 
 </html>
+
