--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Olouch's Chess Foundation</title>
+    <title>The Olouch Chess Foundation</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,7 +13,7 @@
     <header>
         <div class="nav-bar-placeholder"></div>
         <div class="logo">
-            <h1><span class="mind">Mind</span> & <span class="move">Move</span> Chess Foundation</h1>
+            <h1><span class="The Olouch Chess Foundation"></span>The Olouch Chess Foundation</h1>
             <!-- Contact Section -->
             <section id="contact" class="contact">
                 <h2>Get In Touch</h2>
@@ -41,4 +41,5 @@
     </header>
     <script src="script.js"></script>
 </body>
+
 </html>
