--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Olouch's Chess Foundation</title>
+    <title>The Olouch Chess Foundation</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -21,7 +21,7 @@
         <div class="about-content">
             <div class="about-text">
                 <p>
-                    The <strong>Mind & Move Chess Foundation</strong> is dedicated to empowering youth and communities
+                    The <strong>The Olouch  Chess Foundation</strong> is dedicated to empowering youth and communities
                     through the game of chess.
                     <br><br>
                     <strong>Our Objectives:</strong>
