--- a/programs.html
+++ b/programs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Olouch's Chess Foundation</title>
+    <title>The Olouch Chess Foundation</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -13,7 +13,7 @@
     <header>
         <div class="nav-bar-placeholder"></div>
         <div class="logo">
-            <h1><span class="The Olouch's Chess Foundation"></span>The Olouch's Chess Foundation</h1>
+            <h1><span class="The Olouch Chess Foundation"></span>The Olouch  Chess Foundation</h1>
         </div>
         <!-- Programs Section -->
         <section id="programs" class="programs">
@@ -59,7 +59,7 @@
                         <option value="" disabled selected>School Level / Adult</option>
                         <option value="Primary">Primary Level Student</option>
                         <option value="Secondary">Secondary Level Student</option>
-                        <option value="Tertiary">Tertiary Level Student</option>
+                        <option value="Tertiary">University/college</option>
                         <option value="Adult">Adult (Not a Student)</option>
                     </select><br>
                     <button type="submit" class="btn">Submit</button>
@@ -315,5 +315,6 @@
         </script>
         <script src="script.js"></script>
 </body>
+
 
 </html>
