--- a/donate.html
+++ b/donate.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Olouch's Chess Foundation</title>
+    <title>The Olouch Chess Foundation</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -66,7 +66,7 @@
                     <ul>
                         <li>
                             <strong>Mpesa (Kenya):</strong>
-                            Paybill: <span>123456</span>, Account: <span>MindMoveChess</span>
+                            Paybill: <span>123456</span>, Account: <span>The Olouch Chess Foundation</span>
                             <br>
                             <button id="mpesa-pay-btn" type="button" class="btn">Donate via Mpesa Online</button>
                         </li>
@@ -85,11 +85,11 @@
                 </li>
                 <li>
                     <strong>PayPal:</strong>
-                    <a href="https://paypal.me/mindmovechess" target="_blank">paypal.me/mindmovechess</a>
+                    <a href="https://paypal.me/The Olouch Chess Foundation" target="_blank">paypal.me/The Olouch Chess Foundation</a>
                 </li>
                 <li>
                     <strong>Western Union:</strong>
-                    Name: Mind & Move Chess Foundation, Country: Kenya
+                    Name: The Olouch Chess Foundation, Country: Kenya
                 </li>
                 </ul>
         </div>
@@ -103,5 +103,6 @@
     </section>
     <script src="script.js"></script>
 </body>
+
 
 </html>
