--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                         <button type="submit" class="btn">Send Message</button>
                     </form>
                     <div class="contact-info">
-                        <p><i class="fas fa-envelope"></i> info@mindandmovechess.org</p>
+                        <p><i class="fas fa-envelope"></i> info@theolouchchessfoundation.org</p>
                         <p>
                             <i class="fas fa-phone"></i> +254 0111231789
                             <button id="call-btn" class="btn" style="margin-left:10px;">Call Now</button>
@@ -43,3 +43,4 @@
 </body>
 
 </html>
+
