--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Olouch Chess Foundation</title>
+    <title>The Olouch's Chess Foundation</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -114,4 +114,3 @@ document.getElementById('goto-login-btn').onclick = function() {
 </script>
 </body>
 </html>
-
